objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Acknowledged_Days_Old__c</fullName>
        <description>Acknowledged Days Old - Last Modified Date less Created Date</description>
        <formula>LastModifiedDate  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Acknowledged Days Old - Last Modified Date less Created Date</inlineHelpText>
        <label>Acknowledged Days Old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acknowledged__c</fullName>
        <label>Acknowledged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;= 24 hrs</fullName>
                </value>
                <value>
                    <fullName>&lt;= 2 Business Days</fullName>
                </value>
                <value>
                    <fullName>&gt; 2 Business Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Results__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Client Awareness Item</fullName>
                    <color>#FF0000</color>
                    <label>Client Awareness Item</label>
                </value>
                <value>
                    <fullName>Client HR</fullName>
                </value>
                <value>
                    <fullName>Client Information Services</fullName>
                </value>
                <value>
                    <fullName>Client Referral</fullName>
                </value>
                <value>
                    <fullName>Employee Onboarding</fullName>
                </value>
                <value>
                    <fullName>Enrollment Center</fullName>
                </value>
                <value>
                    <fullName>GL</fullName>
                </value>
                <value>
                    <fullName>Health Insurance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>HRO</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>ProHealth</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Supplemental Benefits</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Attendance</fullName>
                </value>
                <value>
                    <fullName>UI</fullName>
                </value>
                <value>
                    <fullName>WC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Account.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Copy_Lead_Email__c</fullName>
        <formula>Lead_Email__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>LastModifiedDate - CreatedDate</description>
        <formula>CASE(
    Status,
   'Completed', DATEVALUE(LastModifiedDate)- DATEVALUE(CreatedDate),
   'Not Started', TODAY() - DATEVALUE(CreatedDate),
   'In Progress', TODAY() - DATEVALUE(CreatedDate),
   'Waiting on someone else', TODAY() - DATEVALUE(CreatedDate),
   'Deferred', TODAY() - DATEVALUE(CreatedDate),
   NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Last Modified Date - Created Date</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Close_Age__c</fullName>
        <formula>IF ( Days_to_Close__c &gt; 0,TEXT(FLOOR( Days_to_Close__c)) &amp; " days " &amp;TEXT( FLOOR( 24 * ( Days_to_Close__c - FLOOR(Days_to_Close__c) ))) &amp; " hours " 
, "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Close Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Close__c</fullName>
        <description>IF(IsClosed, LastModifiedDate -CreatedDate,0)</description>
        <formula>IF(IsClosed, LastModifiedDate -CreatedDate,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <label>Deal Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-19</fullName>
                </value>
                <value>
                    <fullName>20-49</fullName>
                </value>
                <value>
                    <fullName>50-99</fullName>
                </value>
                <value>
                    <fullName>100+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalation_Date__c</fullName>
        <inlineHelpText>Date activity is escalated</inlineHelpText>
        <label>Escalation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Touch_Date__c</fullName>
        <description>Date the task moved from "not started" to "In progress" or "complete"</description>
        <inlineHelpText>Date the task moved from "not started" to "In progress" or "complete"</inlineHelpText>
        <label>First Touch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hours_of_Work__c</fullName>
        <description>Total hours worked to complete the task.</description>
        <inlineHelpText>For trainings this is length in hours of the training session provided. For tasks, this can be used to document how long a task took to complete. If a task has been handed off to you from another department, please do not remove this information.</inlineHelpText>
        <label>Hours of Work</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Idle_Before_First_Touch__c</fullName>
        <formula>IF(ISBLANK(First_Touch_Date__c), NOW() - CreatedDate,First_Touch_Date__c - CreatedDate)</formula>
        <label>Idle Before First Touch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Known_PSH_EE_Connectivity__c</fullName>
        <label>Known PSH EE Connectivity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Email__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Email mapped from the Lead Email to the task/event email.</description>
        <label>Lead Email</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Task</relationshipLabel>
        <relationshipName>Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Notes__c</fullName>
        <label>Meeting Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Short note about the task.  Useful for list views and reports.</description>
        <inlineHelpText>Short note about the task.  Useful for list views and reports.</inlineHelpText>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Minus_7_Days__c</fullName>
        <formula>Days_Open__c - 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Minus 7 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_More_Than_7_Days__c</fullName>
        <formula>Open_Minus_7_Days__c  &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open More Than 7 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <description>For more info:
https://success.salesforce.com/answers?id=9063000000048RbAAI</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reasons_For_Closed_Won_Lost__c</fullName>
        <label>Reasons For Closed Won / Lost</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Unable to Handle Exceptions</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Length of Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regarding_EE_1__c</fullName>
        <inlineHelpText>Enter EE Name if related to call.
Last Name, First Name</inlineHelpText>
        <label>Regarding EE 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_D_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the activity logged in this task directly in support of Playing for Keeps with a client from the PFK List?</inlineHelpText>
        <label>PFK Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Client_ID__c</fullName>
        <formula>WhatId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Work_Date__c</fullName>
        <description>The date that work is expected to start on a task.</description>
        <inlineHelpText>The date that work is expected to start on this task.  Useful for planning out work across multiple tasks.</inlineHelpText>
        <label>Start Work Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Category_1__c</fullName>
        <label>Sub-Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1.5%</fullName>
                </value>
                <value>
                    <fullName>1st Payroll</fullName>
                </value>
                <value>
                    <fullName>2016 Q4 Whistler Watch</fullName>
                </value>
                <value>
                    <fullName>401(k)</fullName>
                </value>
                <value>
                    <fullName>60-day Payroll</fullName>
                </value>
                <value>
                    <fullName>90-day Payroll</fullName>
                </value>
                <value>
                    <fullName>Accident Follow-up</fullName>
                </value>
                <value>
                    <fullName>Accident Notification</fullName>
                </value>
                <value>
                    <fullName>Account Setup</fullName>
                </value>
                <value>
                    <fullName>Account Update</fullName>
                </value>
                <value>
                    <fullName>Aflac</fullName>
                </value>
                <value>
                    <fullName>AM Call Down</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>ASH (Chiro)</fullName>
                </value>
                <value>
                    <fullName>Audits</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Client Approval of Plan</fullName>
                </value>
                <value>
                    <fullName>Client Interaction</fullName>
                </value>
                <value>
                    <fullName>Client Preference</fullName>
                </value>
                <value>
                    <fullName>Client Recontracting</fullName>
                </value>
                <value>
                    <fullName>Client Review</fullName>
                </value>
                <value>
                    <fullName>Client Terms</fullName>
                </value>
                <value>
                    <fullName>Client Update</fullName>
                </value>
                <value>
                    <fullName>Client Update (Contact/Address)</fullName>
                </value>
                <value>
                    <fullName>Close Opp</fullName>
                </value>
                <value>
                    <fullName>CMS Call</fullName>
                </value>
                <value>
                    <fullName>COBRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category_2__c</fullName>
        <label>Sub-Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Category_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1.5% Inquiry</fullName>
                </value>
                <value>
                    <fullName>1.5% Issue</fullName>
                </value>
                <value>
                    <fullName>2014 PEO UI Adj Campaign</fullName>
                </value>
                <value>
                    <fullName>2015 SUTA Rate Inquiry</fullName>
                </value>
                <value>
                    <fullName>940</fullName>
                </value>
                <value>
                    <fullName>941</fullName>
                </value>
                <value>
                    <fullName>Accident Prevention Techniques</fullName>
                </value>
                <value>
                    <fullName>Accident Pricing Review</fullName>
                </value>
                <value>
                    <fullName>Account Status</fullName>
                </value>
                <value>
                    <fullName>Accrual Error</fullName>
                </value>
                <value>
                    <fullName>ACH Change</fullName>
                </value>
                <value>
                    <fullName>ACH Deletion/Recall Request</fullName>
                </value>
                <value>
                    <fullName>ACH Reprocess Request</fullName>
                </value>
                <value>
                    <fullName>ADA</fullName>
                </value>
                <value>
                    <fullName>Add/drop Dependents</fullName>
                </value>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Addendum (new)</fullName>
                </value>
                <value>
                    <fullName>Addendum (revised)</fullName>
                </value>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc Client Interaction Notes - Exec</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc Reports</fullName>
                </value>
                <value>
                    <fullName>Admin Fee Related</fullName>
                </value>
                <value>
                    <fullName>Admin Repricing</fullName>
                </value>
                <value>
                    <fullName>Adv Compliance (Affirmative Action Plan &amp; Policy Program)</fullName>
                </value>
                <value>
                    <fullName>Adv Compliance (Age Discrimination Employment Act)</fullName>
                </value>
                <value>
                    <fullName>Adv Compliance (Americans with Disabilities Act)</fullName>
                </value>
                <value>
                    <fullName>Adv Compliance (Collective Bargaining &amp; Labor Negotiations)</fullName>
                </value>
                <value>
                    <fullName>Adv Compliance (Fair Labor Standards Act)</fullName>
                </value>
                <value>
                    <fullName>Adv Compliance (Family Medical Leave Act)</fullName>
                </value>
                <value>
                    <fullName>Adv Compliance (Government Contractor Laws)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category_3__c</fullName>
        <label>Sub-Category 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Category_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upload to Client folder</fullName>
                </value>
                <value>
                    <fullName>Remove from Client folder</fullName>
                </value>
                <value>
                    <fullName>2018019 - 06/05 - 8:30AM - Kauai - MCP Session 3 (Modules 5 &amp; 6)</fullName>
                </value>
                <value>
                    <fullName>2018W23 - 06/07 - 8:00AM - WEB - Supervisor Series: Behavioral Tips for New Supervisors</fullName>
                </value>
                <value>
                    <fullName>2018020 - TBD - 8:00AM - Oahu - GUEST SPEAKER: Legislative Update</fullName>
                </value>
                <value>
                    <fullName>2018W24 - 06/14 - 8:00AM - WEB - Supervisor Series: Employee Retention - Tips &amp; Tools for Keeping Your Best Employees</fullName>
                </value>
                <value>
                    <fullName>2018021 - 06/19 - 8:30AM - Oahu - MCP Session 3 (Modules 5 &amp; 6)</fullName>
                </value>
                <value>
                    <fullName>2018W25 - 06/21 - 8:00AM - WEB - HIPAA Compliance</fullName>
                </value>
                <value>
                    <fullName>2018W26 - 06/28 - 8:00AM - WEB - Supervisor Series: Practical Tips for New Supervisors</fullName>
                </value>
                <value>
                    <fullName>2018W28 - 06/08 - 8:00 AM - WEB - Supervisor Series: Behavioral Tips for New Supervisors</fullName>
                </value>
                <value>
                    <fullName>2018W29 - 06/19 - 3:00 PM - WEB - Understanding and Managing Change at Work</fullName>
                </value>
                <value>
                    <fullName>2018W30 - 07/05 - 8:00AM - WEB - Professionalism in the Workplace</fullName>
                </value>
                <value>
                    <fullName>2018W31 - 07/12 - 8:00AM - Webinar - Customer Service in Today's Marketplace</fullName>
                </value>
                <value>
                    <fullName>2018W32 - 07/13 - 12:00PM - Webinar - SS: Medical Marijuana in the Workplace</fullName>
                </value>
                <value>
                    <fullName>2018022 - 07/10 - 8:30AM - Big Island - MCP - Session 1</fullName>
                </value>
                <value>
                    <fullName>2018023 - 07/17 - 8:00AM - Oahu - Performance Mangement</fullName>
                </value>
                <value>
                    <fullName>2018W33 - 07/19 - 8:00AM - Webinar - SS: Medical Marijuana in the Workplace</fullName>
                </value>
                <value>
                    <fullName>2018W34 - 07/20 - 12:00PM - Webinar - Customer Service in Today's Marketplace</fullName>
                </value>
                <value>
                    <fullName>2018W35 - 07/26 - 8:00AM - Webinar - Conflict Resolution and Conducting Difficult Conversations</fullName>
                </value>
                <value>
                    <fullName>2018024 - 07/27 - 8:30AM - Oahu - MCP - Session 1</fullName>
                </value>
                <value>
                    <fullName>2018W36 - 08/02 - 8:00AM - Webinar - SS: Business Ethics</fullName>
                </value>
                <value>
                    <fullName>2018025 - 08/07 - 8:30AM - Big Island - MCP - Session 2</fullName>
                </value>
                <value>
                    <fullName>2018W37 - 08/09 - 8:00AM - Webinar - SS: FMLA Basics</fullName>
                </value>
                <value>
                    <fullName>2018W38 - 08/10 - 12:00PM - Webinar - Preventing Harassment in the Workplace</fullName>
                </value>
                <value>
                    <fullName>2018026 - 08/14 - 9:00AM - Big Island - Employment Law Basics</fullName>
                </value>
                <value>
                    <fullName>2018027 - 08/21 - 9:00AM - Maui - Employment Law Basics</fullName>
                </value>
                <value>
                    <fullName>2018028 - 08/15 - 9:00AM - Kauai - Employment Law Basics</fullName>
                </value>
                <value>
                    <fullName>2018W39 - 08/16 - 8:00AM - Webinar - HIPAA Compliance</fullName>
                </value>
                <value>
                    <fullName>2018029 - 08/21 - 8:30AM - Oahu - MCP - Session 2</fullName>
                </value>
                <value>
                    <fullName>2018W40 - 08/23 - 8:00AM - Webinar - DiSC Overview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Facilitator__c</fullName>
        <inlineHelpText>For HR and Safety Trainings, this is the ProService staff member that conducted the training. This field is also used by Client Relations to track ownership of activities within their team.</inlineHelpText>
        <label>Training Facilitator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Title__c</fullName>
        <description>The name of an HR or Safety Training held by ProService.</description>
        <inlineHelpText>The name of an HR or Safety Training held by ProService.</inlineHelpText>
        <label>Training Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Business__c</fullName>
        <label>Type of Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_did_we_lose_this_group_to__c</fullName>
        <label>Who did we lose this group to?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Ceridian</fullName>
                </value>
                <value>
                    <fullName>Altres</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Won_Lost_Comments__c</fullName>
        <label>Won / Lost Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XXOpp_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>XXOpp External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>of_Attendees_Participants__c</fullName>
        <label># of Attendees/Participants</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>Client_HR_Eventbrite_Registration</fullName>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Sub_Category_1__c</columns>
        <columns>Sub_Category_2__c</columns>
        <columns>TASK.TYPE</columns>
        <columns>Sub_Category_3__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>of_Attendees_Participants__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Client HR</value>
        </filters>
        <filters>
            <field>Sub_Category_1__c</field>
            <operation>equals</operation>
            <value>Training - Registration/Attendance</value>
        </filters>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Client HR - Eventbrite Registration</label>
        <sharedTo>
            <group>ACE</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HR_Services_Activity_Report</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>HR</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>HR Services Activity Report</label>
    </listViews>
    <listViews>
        <fullName>HR_Services_Activity_Report_Deferred</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>HR</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Deferred</value>
        </filters>
        <label>HR Services Activity Report  - Deferred</label>
    </listViews>
    <listViews>
        <fullName>HR_Services_Activity_Report_In_Progress</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>HR</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>HR Services Activity Report -In Progress</label>
    </listViews>
    <listViews>
        <fullName>HR_Services_Activity_Report_NotStarted</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>HR</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <label>HR Services Activity Report -Not Started</label>
    </listViews>
    <listViews>
        <fullName>Laulima_Activites</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>lessThan</operation>
            <value>LAU</value>
        </filters>
        <label>Laulima Activites</label>
        <sharedTo>
            <group>ACE</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lokahi_Activities</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>LOK</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Lokahi Activities</label>
        <sharedTo>
            <group>ACE</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_COMPLETED_Activities</fullName>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>Training_Facilitator__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>My COMPLETED Activities</label>
    </listViews>
</CustomObject>